      names other than the column's keynames; default-generated
      values now get populated properly upon flush.  Also,
      composites with attributes set to None compare correctly.
      [ticket:1132]

    - The 3-tuple of iterables returned by attributes.get_history()
      may now be a mix of lists and tuples.  (Previously members
      were always lists.)


- sql
    - Temporarily rolled back the "ORDER BY" enhancement from
      [ticket:1068].  This feature is on hold pending further
      development.

0.5beta3
========

0.5beta3 includes all bugfixes listed under release "0.4.7".

- orm
    - The "entity_name" feature of SQLAlchemy mappers has been
      removed.  For rationale, see http://tinyurl.com/6nm2ne

    - the "autoexpire" flag on Session, sessionmaker(), and
      scoped_session() has been renamed to "expire_on_commit".  It
      does not affect the expiration behavior of rollback().

    - fixed endless loop bug which could occur within a mapper's
      deferred load of inherited attributes.

    - a legacy-support flag "_enable_transation_accounting" flag
      added to Session which when False, disables all
      transaction-level object accounting, including expire on
      rollback, expire on commit, new/deleted list maintenance, and
      autoflush on begin.

    - The 'cascade' parameter to relation() accepts None as a value,
      which is equivalent to no cascades.

    - A critical fix to dynamic relations allows the "modified"
      history to be properly cleared after a flush().

    - user-defined @properties on a class are detected and left in
      place during mapper initialization.  This means that a
      table-bound column of the same name will not be mapped at all
      if a @property is in the way (and the column is not remapped
      to a different name), nor will an instrumented attribute from
      an inherited class be applied.  The same rules apply for names